# acp-orchestrator

./: .coupling.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  renovate.json5  rust-toolchain.toml  sonar-project.properties
crates/acp-app-support/: Cargo.toml
crates/acp-app-support/src/: lib.rs  tests.rs
crates/acp-cli/: Cargo.toml
crates/acp-cli/src/: api.rs  chat_tests.rs  contract_errors.rs  contract_messages.rs  contract_permissions.rs  contract_sessions.rs  contract_slash.rs  contract_workspaces.rs  events.rs  input.rs  lib.rs  main.rs  recent_sessions.rs  repl_commands.rs  tests.rs
crates/acp-cli/src/input/: tests.rs
crates/acp-cli/src/support/: http.rs  tracing.rs
crates/acp-cli/src/tui/: app.rs  input.rs  mod.rs  mod_tests.rs  render.rs  runtime.rs  tests.rs
crates/acp-cli/src/tui/input/tests/: completion.rs  editing.rs  events.rs  mod.rs  navigation.rs  outcomes.rs  submission.rs  terminal.rs
crates/acp-cli/src/tui/runtime/: permissions.rs  terminal.rs
crates/acp-cli/src/tui/tests/: app.rs  cursor.rs  mod.rs  render_ui.rs
crates/acp-cli/tests/: cli_binary.rs
crates/acp-contracts/: Cargo.toml
crates/acp-contracts-sessions/: Cargo.toml
crates/acp-contracts-sessions/src/: lib.rs
crates/acp-contracts/src/: lib.rs
crates/acp-mock/: Cargo.toml
crates/acp-mock/src/: lib.rs  main.rs  notifications.rs  prompt.rs  runtime.rs  tests.rs
crates/acp-mock/src/support/: errors.rs  http.rs  mod.rs  service.rs
crates/acp-mock/tests/: binary_main.rs
crates/acp-web-backend/: Cargo.toml
crates/acp-web-backend/.acp-state/: db.sqlite
crates/acp-web-backend/src/: agent_profiles.rs  agent_runtime.rs  auth.rs  completions.rs  contract_accounts.rs  contract_health.rs  contract_permissions.rs  contract_sessions.rs  contract_slash.rs  contract_stream.rs  contract_workspaces.rs  lib.rs  main.rs  mock_client.rs  runtime.rs  server.rs  sessions.rs  workspace_checkout.rs  workspace_records.rs  workspace_repository.rs  workspace_store.rs
crates/acp-web-backend/src/app_assets/: app.css  app.html  app.js  wasm-init.js
crates/acp-web-backend/src/mock_client/: backend_client.rs
crates/acp-web-backend/src/mock_client/tests/: backend_client.rs  helpers.rs  mod.rs  request_reply.rs
crates/acp-web-backend/src/server/: account_api.rs  account_service.rs  agent_profile_api.rs  assets.rs  connection.rs  session_api.rs  session_service.rs  tests.rs  workspace_service.rs
crates/acp-web-backend/src/server/account_api/: admin.rs  auth.rs  mod.rs
crates/acp-web-backend/src/server/session_api/: mod.rs  read.rs  stream.rs  write.rs
crates/acp-web-backend/src/server/session_service/tests/: service.rs
crates/acp-web-backend/src/server/tests/: app_state.rs  assets.rs  connections.rs  mod.rs  routing_auth.rs  session_routes.rs  support_behaviors.rs  workspace_routes.rs
crates/acp-web-backend/src/server/workspace_api/: mod.rs  read.rs  write.rs
crates/acp-web-backend/src/sessions/: handle.rs
crates/acp-web-backend/src/sessions/tests/: history.rs  mod.rs  permissions.rs
crates/acp-web-backend/src/support/: frontend.rs  http.rs  mod.rs  runtime.rs
crates/acp-web-backend/src/workspace_checkout/tests/: checkout.rs
crates/acp-web-backend/src/workspace_store/: ops.rs
crates/acp-web-backend/src/workspace_store/ops/: accounts.rs  mod.rs  queries.rs  schema.rs  session_metadata.rs  shared.rs
crates/acp-web-backend/src/workspace_store/tests/: workspaces.rs
crates/acp-web-backend/tests/: binary_main.rs  browser_ui_fantoccini.rs  session_api_roundtrip.rs
crates/acp-web-backend/tests/session_api_roundtrip/: basic_flow.rs  lifecycle.rs  permissions.rs  support.rs  web_browser.rs  workspaces.rs
crates/acp-web-frontend/: Cargo.toml  Trunk.toml  deny.toml  index.html
crates/acp-web-frontend/src/: api.rs  browser.rs  lib.rs  routing.rs  session.rs  session_activity.rs  session_lifecycle.rs  session_page.rs  session_page_bootstrap.rs  session_page_callbacks.rs  session_page_composer_signals.rs  session_page_dock.rs  session_page_entries.rs  session_page_home.rs  session_page_layout.rs  session_page_main.rs  session_page_main_signals.rs  session_page_shell_signals.rs  session_page_sidebar.rs  session_page_sidebar_header.rs  session_page_sidebar_item.rs  session_page_sidebar_list.rs  session_page_sidebar_nav.rs  session_page_sidebar_status.rs  session_page_sidebar_styles.rs  session_page_signals.rs  session_page_topbar.rs  session_page_transcript.rs  session_state.rs  slash.rs  transcript_view.rs
crates/acp-web-frontend/src/application/: auth.rs
crates/acp-web-frontend/src/components/: composer.rs  composer_footer.rs  composer_palette.rs  error_banner.rs  header.rs  mod.rs  pending_permissions.rs  transcript.rs  workspace_branch_picker.rs
crates/acp-web-frontend/src/domain/: auth.rs  mod.rs  routing.rs  session.rs  transcript.rs
crates/acp-web-frontend/src/infrastructure/: api.rs
crates/acp-web-frontend/src/infrastructure/api/: accounts.rs  auth.rs  errors.rs  paths.rs  request.rs  response.rs  sessions.rs  stream.rs  workspaces.rs
crates/acp-web-frontend/src/presentation/: accounts.rs  auth.rs  auth_page.rs  icons.rs  mod.rs  register.rs  return_to.rs  sign_in.rs  workspaces.rs
crates/acp-web-frontend/src/presentation/accounts/: agent_profiles.rs  auth_controls.rs  create_account.rs  page.rs  registry.rs  route.rs  shared.rs
crates/acp-web-frontend/src/presentation/workspaces/: create_workspace.rs  registry.rs  route.rs  shared.rs
crates/acp-web-frontend/src/session/page/: actions.rs  bootstrap.rs  entries.rs  mod.rs  state.rs  view.rs
crates/acp-web-frontend/src/session/page/actions/: bootstrap.rs  mod.rs  session_list.rs  shared.rs  slash.rs
crates/acp-web-frontend/src/session/page/actions/stream/: events.rs  mod.rs  (+2 more)
crates/acp-web-frontend/src/session/page/view/: layout.rs  main.rs  mod.rs  sidebar.rs
crates/acp-web-frontend/src/session_page_actions/: bootstrap.rs  mod.rs  session_list.rs  shared.rs  slash.rs
crates/acp-web-frontend/src/session_page_actions/stream/: events.rs  permissions.rs  transport.rs
(+70 files in other folders)
