[package]
name = "acp-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "acp"

[workspace]
members = [
  "crates/acp-cli",
  "crates/acp-contracts",
  "crates/acp-mock",
  "crates/acp-web-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
acp-contracts = { path = "crates/acp-contracts" }
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "5.0.1"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = "0.9.0"
tokio = { version = "1.51.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dependencies]
acp-cli = { path = "crates/acp-cli" }
acp-mock = { path = "crates/acp-mock" }
acp-web-backend = { path = "crates/acp-web-backend" }
reqwest.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "acp"
path = "src/main.rs"
