[package]
name = "acp-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "acp"

[workspace]
members = [
  "crates/acp-app-support",
  "crates/acp-cli",
  "crates/acp-contracts",
  "crates/acp-mock",
  "crates/acp-web-backend",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
acp-app-support = { path = "crates/acp-app-support" }
acp-contracts = { path = "crates/acp-contracts" }
agent-client-protocol = "=0.10.4"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["macros"] }
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive", "env"] }
crossterm = "=0.29.0"
dirs = "=6.0.0"
eventsource-stream = "=0.2.3"
futures-util = "=0.3.32"
hyper = { version = "=1.9.0", features = ["http1", "server"] }
hyper-util = { version = "=0.1.20", features = [
  "http1",
  "server",
  "service",
  "tokio",
] }
libc = "=0.2.185"
open = "=5.3.3"
ratatui = "=0.30.0"
rcgen = "=0.14.7"
reqwest = { version = "=0.13.2", default-features = false, features = [
  "cookies",
  "json",
  "rustls",
  "stream",
] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
snafu = "=0.9.0"
subtle = "=2.6.1"
tokio = { version = "=1.51.1", features = ["full"] }
tokio-rustls = "=0.26.4"
tokio-stream = { version = "=0.1.18", features = ["sync"] }
tokio-util = { version = "=0.7.18", features = ["compat"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
unicode-width = "=0.2.2"
uuid = { version = "=1.23.1", features = ["serde", "v4"] }

[dependencies]
acp-app-support.workspace = true
acp-cli = { path = "crates/acp-cli" }
acp-mock = { path = "crates/acp-mock" }
acp-web-backend = { path = "crates/acp-web-backend" }
dirs.workspace = true
libc.workspace = true
open.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[[bin]]
name = "acp"
path = "src/main.rs"

[dev-dependencies]
acp-contracts.workspace = true
