[package]
name = "acp-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "acp"

[workspace]
members = [
  "crates/acp-app-support",
  "crates/acp-app-support-errors",
  "crates/acp-app-support-frontend",
  "crates/acp-app-support-http",
  "crates/acp-app-support-listener",
  "crates/acp-app-support-runtime",
  "crates/acp-app-support-service",
  "crates/acp-app-support-temp",
  "crates/acp-app-support-tracing",
  "crates/acp-cli",
  "crates/acp-contracts",
  "crates/acp-contracts-accounts",
  "crates/acp-contracts-errors",
  "crates/acp-contracts-messages",
  "crates/acp-contracts-permissions",
  "crates/acp-contracts-sessions",
  "crates/acp-contracts-slash",
  "crates/acp-contracts-stream",
  "crates/acp-contracts-workspaces",
  "crates/acp-mock",
  "crates/acp-web-backend",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
acp-app-support-errors = { path = "crates/acp-app-support-errors", version = "=0.1.0" }
acp-app-support-frontend = { path = "crates/acp-app-support-frontend", version = "=0.1.0" }
acp-app-support-http = { path = "crates/acp-app-support-http", version = "=0.1.0" }
acp-app-support-listener = { path = "crates/acp-app-support-listener", version = "=0.1.0" }
acp-app-support-runtime = { path = "crates/acp-app-support-runtime", version = "=0.1.0" }
acp-app-support-service = { path = "crates/acp-app-support-service", version = "=0.1.0" }
acp-app-support-temp = { path = "crates/acp-app-support-temp", version = "=0.1.0" }
acp-app-support-tracing = { path = "crates/acp-app-support-tracing", version = "=0.1.0" }
acp-contracts-accounts = { path = "crates/acp-contracts-accounts", version = "=0.1.0" }
acp-contracts-errors = { path = "crates/acp-contracts-errors", version = "=0.1.0" }
acp-contracts-messages = { path = "crates/acp-contracts-messages", version = "=0.1.0" }
acp-contracts-permissions = { path = "crates/acp-contracts-permissions", version = "=0.1.0" }
acp-contracts-sessions = { path = "crates/acp-contracts-sessions", version = "=0.1.0" }
acp-contracts-slash = { path = "crates/acp-contracts-slash", version = "=0.1.0" }
acp-contracts-stream = { path = "crates/acp-contracts-stream", version = "=0.1.0" }
acp-contracts-workspaces = { path = "crates/acp-contracts-workspaces", version = "=0.1.0" }
agent-client-protocol = "=0.11.1"
argon2 = "=0.5.3"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["macros"] }
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive", "env"] }
crossterm = "=0.29.0"
dirs = "=6.0.0"
eventsource-stream = "=0.2.3"
futures-util = "=0.3.32"
hyper = { version = "=1.9.0", features = ["http1", "server"] }
hyper-util = { version = "=0.1.20", features = [
  "http1",
  "server",
  "service",
  "tokio",
] }
libc = "=0.2.185"
open = "=5.3.4"
ratatui = "=0.30.0"
rcgen = "=0.14.7"
reqwest = { version = "=0.13.2", default-features = false, features = [
  "cookies",
  "json",
  "rustls",
  "stream",
] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.11.0"
snafu = "=0.9.0"
subtle = "=2.6.1"
tokio = { version = "=1.52.1", features = ["full"] }
tokio-rustls = "=0.26.4"
tokio-stream = { version = "=0.1.18", features = ["sync"] }
tokio-util = { version = "=0.7.18", features = ["compat"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
unicode-width = "=0.2.2"
uuid = { version = "=1.23.1", features = ["serde", "v4"] }

[dependencies]
acp-app-support-errors.workspace = true
acp-app-support-frontend.workspace = true
acp-app-support-http.workspace = true
acp-app-support-temp.workspace = true
acp-app-support-tracing.workspace = true
acp-cli = { path = "crates/acp-cli", version = "=0.1.0" }
acp-mock = { path = "crates/acp-mock", version = "=0.1.0" }
acp-web-backend = { path = "crates/acp-web-backend", version = "=0.1.0" }
dirs.workspace = true
libc.workspace = true
open.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[[bin]]
name = "acp"
path = "src/main.rs"
