[package]
name = "acp-app-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-helpers = ["dep:reqwest"]

[dependencies]
clap.workspace = true
reqwest = { workspace = true, optional = true }
snafu.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
