[package]
name = "acp-app-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-helpers = []

[dependencies]
acp-app-support-errors.workspace = true
acp-app-support-frontend.workspace = true
acp-app-support-http.workspace = true
acp-app-support-listener.workspace = true
acp-app-support-runtime.workspace = true
acp-app-support-service.workspace = true
acp-app-support-temp.workspace = true
acp-app-support-tracing.workspace = true
