[package]
name = "acp-contracts-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-contracts-messages.workspace = true
acp-contracts-permissions.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
