[package]
name = "acp-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-contracts-accounts.workspace = true
acp-contracts-errors.workspace = true
acp-contracts-messages.workspace = true
acp-contracts-permissions.workspace = true
acp-contracts-sessions.workspace = true
acp-contracts-slash.workspace = true
acp-contracts-stream.workspace = true
