[package]
name = "acp-mock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-app-support.workspace = true
acp-contracts.workspace = true
axum.workspace = true
clap.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
acp-app-support = { workspace = true, features = ["test-helpers"] }
reqwest.workspace = true
