[package]
name = "acp-mock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-app-support-errors.workspace = true
acp-app-support-http.workspace = true
acp-app-support-listener.workspace = true
acp-app-support-runtime.workspace = true
acp-app-support-service.workspace = true
acp-app-support-tracing.workspace = true
agent-client-protocol.workspace = true
async-trait.workspace = true
clap.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
