[package]
name = "acp-web-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-app-support.workspace = true
acp-contracts.workspace = true
agent-client-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
libc.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
subtle.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
acp-app-support = { workspace = true, features = ["test-helpers"] }
acp-mock = { path = "../acp-mock", version = "=0.1.0" }
anyhow = "=1.0.102"
eventsource-stream.workspace = true
futures-util.workspace = true
tokio.workspace = true
