[package]
name = "acp-web-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acp-app-support-errors.workspace = true
acp-app-support-frontend.workspace = true
acp-app-support-http.workspace = true
acp-app-support-listener.workspace = true
acp-app-support-runtime.workspace = true
acp-app-support-service.workspace = true
acp-app-support-tracing.workspace = true
acp-contracts-accounts.workspace = true
acp-contracts-errors.workspace = true
acp-contracts-messages.workspace = true
acp-contracts-permissions.workspace = true
acp-contracts-sessions.workspace = true
acp-contracts-slash.workspace = true
acp-contracts-stream.workspace = true
agent-client-protocol.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
libc.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
subtle.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
acp-mock = { path = "../acp-mock", version = "=0.1.0" }
anyhow = "=1.0.102"
eventsource-stream.workspace = true
fantoccini = { version = "=0.22.1", default-features = false, features = [
  "rustls-tls",
] }
futures-util.workspace = true
tokio.workspace = true
tower = "=0.5.3"
