[package]
name = "acp-web-frontend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

# This crate is NOT part of the main Cargo workspace.
# It is built separately with `trunk build --release` targeting wasm32-unknown-unknown.
# The workspace Cargo.toml excludes it so `cargo build/test` in the repo root
# do not try to compile it for the host target.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acp-contracts = { path = "../acp-contracts" }
console_error_panic_hook = "0.1"
futures-channel = "0.3"
futures-util = "0.3"
gloo-net = { version = "0.6", features = ["http", "json"] }
leptos = { version = "0.7.8", features = ["csr"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "EventSource",
  "EventTarget",
  "HtmlElement",
  "HtmlMetaElement",
  "HtmlTextAreaElement",
  "Location",
  "MessageEvent",
  "Storage",
  "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
