[package]
name = "acp-web-frontend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

# This crate is NOT part of the main Cargo workspace.
# It is built separately with `trunk build --release` targeting wasm32-unknown-unknown.
# The workspace Cargo.toml excludes it so `cargo build/test` in the repo root
# do not try to compile it for the host target.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acp-contracts-accounts = { path = "../acp-contracts-accounts", version = "=0.1.0" }
acp-contracts-errors = { path = "../acp-contracts-errors", version = "=0.1.0" }
acp-contracts-messages = { path = "../acp-contracts-messages", version = "=0.1.0" }
acp-contracts-permissions = { path = "../acp-contracts-permissions", version = "=0.1.0" }
acp-contracts-sessions = { path = "../acp-contracts-sessions", version = "=0.1.0" }
acp-contracts-slash = { path = "../acp-contracts-slash", version = "=0.1.0" }
acp-contracts-stream = { path = "../acp-contracts-stream", version = "=0.1.0" }
console_error_panic_hook = "=0.1.7"
futures-channel = "=0.3.32"
futures-util = "=0.3.32"
gloo-net = { version = "=0.7.0", features = ["http", "json"] }
leptos = { version = "=0.8.19", features = ["csr"] }
pulldown-cmark = "=0.13.3"
serde_json = "=1.0.149"
wasm-bindgen = "=0.2.118"
web-sys = { version = "=0.3.95", features = [
  "Document",
  "Element",
  "Event",
  "EventSource",
  "EventTarget",
  "FocusEvent",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlMetaElement",
  "HtmlTextAreaElement",
  "Location",
  "MessageEvent",
  "Node",
  "PointerEvent",
  "Storage",
  "Window",
] }

[dev-dependencies]
chrono = { version = "=0.4.44", features = ["serde"] }
wasm-bindgen-test = "=0.3.68"

[profile.release]
opt-level = "z"
lto = true
